SimpleComplex/Utils 1.x, 2017-06-05
-----------------------------------
- Unicode and Sanitize shan't use a logger. The benefit of logging argument
  errors is nil (provided the environment's errorhandler traces exceptions),
  and the extra complexity of a dependency is (was) considerable.
- CliEnvironment allow extending constructur to provide dependency by other
  means.
- getInstance() in trait document return value 'object' (not 'static'); or IDE
  might not resolve class when instance is a member of another object than
  the object it is used in.
- Environment variable based configuration class, implementing PSR Simple Cache
  interface.
- EnvVarConfig also implement config-domain-delimiter interface.
- Stopped including getInstance() trait; IDE cannot resolve classes beyond
  1 level of reference.
- CliEnvironment now records input errors and aborts mapping command on such.

SimpleComplex/Utils 1.x, 2017-06-04
-----------------------------------
- CliEnvironment and CliCommand.

SimpleComplex/Utils 1.x, 2017-05-31
-----------------------------------
- Use parameter type declaration when possible, despite ambiguous effect for
  method callers (coercion or TypeError).

SimpleComplex/Utils 1.x, 2017-05-29
-----------------------------------
- GetInstanceTrait now separates instances by class, to prevent getInstance()
  from returning instance of other class than the class the method is called on.

SimpleComplex/Utils 1.x, 2017-05-27
-----------------------------------
- Added setLogger() methods, for providing logger after instantiation.

SimpleComplex/Utils 1.x, 2017-05-25
-----------------------------------
- Exceptions moved to sub namespace \Exception.

SimpleComplex/Utils 1.x, 2017-05-24
-----------------------------------
- Unicode and Sanitize methods now (optionally) log and err on bad args.
- Unicode now (also) coerces subject arg to string.
- New sanitizer numberToString().

SimpleComplex/Utils 1.x, 2017-05-22
-----------------------------------